src/objects/Apttus_Billing__DunningPolicy__c.object
<CustomObject>
    <description>This object stores information about the dunning policy. This is needed to store a group of dunning policy line items together in one single policy.</description>
    <fields>
        <fullName>Apttus_Billing__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only active Dunning policy can be used for sending reminders</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only one dunning policy can be default at a time</description>
        <inlineHelpText>Only one dunning policy can be default at a time</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NumberOfReminders__c</fullName>
        <description>Decides how many notification to be sent. Based on this value number of Dunning policy line items will be created
E.g. 3, 5, 7 etc.</description>
        <label>Number Of Reminders</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dunning Policy</label>
    <listViews>
        <fullName>Apttus_Billing__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Billing__NumberOfReminders__c</columns>
        <columns>Apttus_Billing__Active__c</columns>
        <columns>Apttus_Billing__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dunning Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dunning Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>